--- a/cluster/apps/monitoring/kustomization.yaml
+++ b/cluster/apps/monitoring/kustomization.yaml
@@ -1,15 +1,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- alertmanager/helm-release.yaml
 - grafana/helm-release.yaml
 - kube-state-metrics/helm-release.yaml
+- loki
 - node-exporter/helm-release.yaml
 - snmp-exporter/config-map.yaml
 - snmp-exporter/helm-release.yaml
 - speed-monitor/helm-release.yaml
-- alertmanager/helm-release.yaml
+- uptime-kuma
+- vector
 - victoria-metrics
-- botkube/
-- vector/
-- uptime-kuma/
-- loki/
