--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -1,19 +1,16 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - cert-manager
-  - databases/
-  # - traefik/
-  - ingress-nginx/
-  - longhorn/
-  - minio/
-    # - coredns/helm-release.yaml
-  - k8s-gateway/helm-release.yaml
-  - node-feature-discovery/helm-release.yaml
-  - intel-gpu-plugin/
-  - authelia/
-  - descheduler/helm-release.yaml
-  - volsync/
-  - csi-driver-nfs
-  - metallb/
+- authelia
+- cert-manager
+- csi-driver-nfs
+- databases
+- descheduler/helm-release.yaml
+- ingress-nginx
+- intel-gpu-plugin
+- k8s-gateway/helm-release.yaml
+- longhorn
+- metallb
+- minio
+- node-feature-discovery/helm-release.yaml
+- volsync
