--- a/cluster/apps/monitoring/vector/aggregator/helm-release.yaml
+++ b/cluster/apps/monitoring/vector/aggregator/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: vector
-      version: 0.19.2
+      version: 0.20..0
       sourceRef:
         kind: HelmRepository
         name: vector-charts
@@ -22,9 +22,9 @@ spec:
   upgrade:
     remediation:
       retries: 5
-  # dependsOn:
-  #   - name: loki
-  #     namespace: monitoring
+  dependsOn:
+    - name: loki
+      namespace: monitoring
   values:
     customConfig:
       data_dir: /vector-data-dir
@@ -59,40 +59,40 @@ spec:
       # Sinks
       #
       sinks:
-        # loki_journal:
-        #   type: loki
-        #   inputs:
-        #     - journal_logs
-        #   endpoint: http://loki-gateway:80
-        #   encoding:
-        #     codec: json
-        #   batch:
-        #     max_bytes: 2049000
-        #   out_of_order_action: accept
-        #   remove_label_fields: true
-        #   remove_timestamp: true
-        #   labels:
-        #     hostname: >-
-        #       {{`{{ host }}`}}
-        # loki_kubernetes:
-        #   type: loki
-        #   inputs:
-        #     - kubernetes_logs_remap
-        #   endpoint: http://loki-gateway:80
-        #   encoding:
-        #     codec: json
-        #   batch:
-        #     max_bytes: 2049000
-        #   out_of_order_action: accept
-        #   remove_label_fields: true
-        #   remove_timestamp: true
-        #   labels:
-        #     app: >-
-        #       {{`{{ custom_app_name }}`}}
-        #     namespace: >-
-        #       {{`{{ kubernetes.pod_namespace }}`}}
-        #     node: >-
-        #       {{`{{ kubernetes.pod_node_name }}`}}
+        loki_journal:
+          type: loki
+          inputs:
+            - journal_logs
+          endpoint: http://loki-gateway:80
+          encoding:
+            codec: json
+          batch:
+            max_bytes: 2049000
+          out_of_order_action: accept
+          remove_label_fields: true
+          remove_timestamp: true
+          labels:
+            hostname: >-
+              {{`{{ host }}`}}
+        loki_kubernetes:
+          type: loki
+          inputs:
+            - kubernetes_logs_remap
+          endpoint: http://loki-gateway:80
+          encoding:
+            codec: json
+          batch:
+            max_bytes: 2049000
+          out_of_order_action: accept
+          remove_label_fields: true
+          remove_timestamp: true
+          labels:
+            app: >-
+              {{`{{ custom_app_name }}`}}
+            namespace: >-
+              {{`{{ kubernetes.pod_namespace }}`}}
+            node: >-
+              {{`{{ kubernetes.pod_node_name }}`}}
         prometheus_sink:
           type: prometheus_exporter
           inputs:
@@ -107,7 +107,7 @@ spec:
           #     codec: json
     image:
       repository: timberio/vector
-      tag: 0.27.1-debian
+      tag: 0.28.0-debian
     role: Stateless-Aggregator
     replicas: 3
     # env:
