--- a/cluster/core/longhorn/storage-classes.yaml
+++ b/cluster/core/longhorn/storage-classes.yaml
@@ -42,6 +42,9 @@ metadata:
   name: longhorn
 driver: driver.longhorn.io
 deletionPolicy: Delete
+parameters:
+  numberOfReplicas: "2"
+  staleReplicaTimeout: "2880"
 ---
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
