--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- authelia
+- stupid-auth
 - cert-manager
 - csi-driver-nfs
 - databases
