--- a/cluster/core/ingress-nginx/helm-release.yaml
+++ b/cluster/core/ingress-nginx/helm-release.yaml
@@ -25,8 +25,8 @@ spec:
         enabled: true
         type: LoadBalancer
         loadBalancerIP: "${SVC_INGRESS_ADDR}"
-        externalIPs:
-          - ${SECRET_HOME_IP}
+        # externalIPs:
+        #   - ${SECRET_HOME_IP}
         externalTrafficPolicy: Local
         annotations:
           external-dns.alpha.kubernetes.io/hostname: ${SECRET_DOMAIN}
