--- a/cluster/core/ingress-nginx/helm-release.yaml
+++ b/cluster/core/ingress-nginx/helm-release.yaml
@@ -25,11 +25,12 @@ spec:
         enabled: true
         type: LoadBalancer
         loadBalancerIP: "${SVC_INGRESS_ADDR}"
-        # externalIPs:
-        #   - ${SECRET_HOME_IP}
+        externalIPs:
+          - ${SECRET_HOME_IP}
         externalTrafficPolicy: Cluster
         annotations:
           external-dns.alpha.kubernetes.io/hostname: ${SECRET_DOMAIN}
+          # external-dns.alpha.kubernetes.io/internal-hostname: ${SECRET_HOME_IP}
 
       publishService:
         enabled: true
