--- a/cluster/core/ingress-nginx/helm-release.yaml
+++ b/cluster/core/ingress-nginx/helm-release.yaml
@@ -30,7 +30,7 @@ spec:
         externalTrafficPolicy: Cluster
         annotations:
           external-dns.alpha.kubernetes.io/hostname: ${SECRET_DOMAIN}
-          # external-dns.alpha.kubernetes.io/internal-hostname: ${SECRET_HOME_IP}
+          external-dns.alpha.kubernetes.io/internal-hostname: ${SECRET_HOME_IP}
 
       publishService:
         enabled: true
