--- a/cluster/core/cilium/kustomization.yaml
+++ b/cluster/core/cilium/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- hr.yaml
-- l2.yaml
+  - hr.yaml
+  # - l2.yaml
+  - bgp.yaml
