--- a/cluster/apps/networking/external-dns/secrets.enc.yaml
+++ b/cluster/apps/networking/external-dns/secrets.enc.yaml
@@ -4,6 +4,7 @@ metadata:
     name: cloudflare-creds
     namespace: networking
 stringData:
+    cloudflare_api_email: ENC[AES256_GCM,data:JwMMq+9+x+xWABMa7RI=,iv:Xrd9T6oS/rHLCAxQvdLHEtxMOVl2A6e2qMltNNfLzGI=,tag:ioJdCS/g9+MRIUabwOopOQ==,type:str]
     cloudflare_api_token: ENC[AES256_GCM,data:RUYQm+RABN1bDOuU3Y+RfiFA5m7HJQrEAq6xJ8j905hqN9gIgbs/GQ==,iv:HM+QGb0rrJv3L0kzeJtfxdKXyVaRq8cnoQD7TC3jd38=,tag:1tG1l+R00tTSfo51y0YlKg==,type:str]
 type: Opaque
 sops:
@@ -21,8 +22,8 @@ sops:
             bm9OVlUzazFRajJDaHJ5dnFtdUtjQWMKtOyJvbmWbReshyR3ft7z7QbHFgw0FvKw
             kWaY3JuQZW05F1NXhnI+ltnVSYQRI+Z77cpJDee6jcHm/tpeRvZjEA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-17T18:23:43Z"
-    mac: ENC[AES256_GCM,data:qS5LRt5J1YpUK7lUfVCZH0S6z6tGrEHzd9D/Coa7cRB3Wvvb7vD6diH46JYRzYKGtDKGDYqvJONqaGv4DkLh42bQkAs/renr6fnPQT5/HEhEo11z9NgpjVuPfIIu3iGko/NSXY9knjDhLd5MzmihJseT5omk4LGULfejBpnhqcg=,iv:WMi520CvwuFepnNKfjIYvjhfUcYJS8QGTbvGmSWWmTo=,tag:4p0MZYXx6GdiqRb4+J1v0Q==,type:str]
+    lastmodified: "2023-12-28T14:31:29Z"
+    mac: ENC[AES256_GCM,data:fV8mgmuD5v9vd6aCj02DKV89zS4aCof1UQL4Jyo390FuQUTqe++mAW7OQj1PscaqjFCm2xrKYynd2nDEu8cOz18Iyvy6tgD2ZgJD4DlPWUbWxCvmQRh2yu5xkN1A6MTSwfMaDVHQnrsDrQb4VmvrA7N4dIc3BcqVU5ZSN83W8IQ=,iv:CuTI5H8OgW4utQtqwHNgnCPkmD9IASaKXVAZjF0UvPk=,tag:KuUSwkNhRZ7mPhRfYJeoSg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.1
+    version: 3.8.1
