--- a/cluster/apps/networking/external-dns/helm-release.yaml
+++ b/cluster/apps/networking/external-dns/helm-release.yaml
@@ -15,8 +15,16 @@ spec:
         name: external-dns-charts
         namespace: flux-system
       interval: 5m
+  maxHistory: 2
   install:
-    createNamespace: true
+    remediation:
+      retries: 3
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 3
+  uninstall:
+    keepHistory: false
   values:
     fullnameOverride: *app
     provider: cloudflare
