--- a/cluster/apps/networking/external-dns/helm-release.yaml
+++ b/cluster/apps/networking/external-dns/helm-release.yaml
@@ -38,7 +38,8 @@ spec:
       - --cloudflare-proxied
       # - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
       # - --crd-source-kind=DNSEndpoint
-      - --zone-id-filter=${SECRET_INGRESS_ZONE_ID},${SECRET_DOMAIN_OUTSIDE_ZONE_ID}
+      - --zone-id-filter=${SECRET_INGRESS_ZONE_ID}
+      - --zone-id-filter=${SECRET_DOMAIN_OUTSIDE_ZONE_ID}
     policy: sync
     sources: ["crd", "ingress"]
     txtOwnerId: homelab
