--- a/cluster/apps/monitoring/victoria-metrics/vm-agent.yaml
+++ b/cluster/apps/monitoring/victoria-metrics/vm-agent.yaml
@@ -22,7 +22,7 @@ spec:
       cpu: "300m"
       memory: "2Gi"
   remoteWrite:
-    - url: "http://vmsingle-vmsingle:8429/"
+    - url: "http://vmsingle-vmsingle:8429/api/v1/write"
   inlineScrapeConfig: |
     - job_name: vmagent
       static_configs:
