--- a/cluster/apps/monitoring/kube-state-metrics/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-state-metrics/helm-release.yaml
@@ -18,6 +18,11 @@ spec:
   values:
     fullnameOverride: kube-state-metrics
     releaseLabel: false # disable for victoria-metrics
+    resources:
+      requests:
+        cpu: 10m
+      limits:
+        memory: 100Mi
     metricLabelsAllowlist:
       - deployments=[*]
       - persistentvolumeclaims=[*]
