--- a/cluster/apps/monitoring/node-exporter/helm-release.yaml
+++ b/cluster/apps/monitoring/node-exporter/helm-release.yaml
@@ -17,6 +17,11 @@ spec:
         namespace: flux-system
   values:
     nameOverride: node-exporter
+    resources:
+      requests:
+        cpu: 10m
+      limits:
+        memory: 100Mi
     prometheus:
       monitor:
         enabled: true
