--- a/cluster/apps/monitoring/victoria-metrics/vm-agent.yaml
+++ b/cluster/apps/monitoring/victoria-metrics/vm-agent.yaml
@@ -19,8 +19,7 @@ spec:
       cpu: "100m"
       memory: "400Mi"
     limits:
-      cpu: "300m"
-      memory: "2Gi"
+      memory: "981Mi"
   remoteWrite:
     - url: "http://vmsingle-vmsingle:8429/api/v1/write"
   inlineScrapeConfig: |
