--- a/cluster/apps/networking/external-dns/helm-release.yaml
+++ b/cluster/apps/networking/external-dns/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: external-dns
-      version: 1.13.1
+      version: 1.14.3
       sourceRef:
         kind: HelmRepository
         name: external-dns-charts
@@ -26,6 +26,9 @@ spec:
   uninstall:
     keepHistory: false
   values:
+    image:
+      repository: registry.k8s.io/external-dns/external-dns
+      tag: v0.14.1
     fullnameOverride: *app
     provider: cloudflare
     env:
