--- a/cluster/charts/weave-gitops-charts.yaml
+++ b/cluster/charts/weave-gitops-charts.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1h
-  url: https://helm.gitops.weave.works
+  url: oci://ghcr.io/weaveworks/charts/
