--- a/cluster/core/intel-gpu-plugin/kustomization.yaml
+++ b/cluster/core/intel-gpu-plugin/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- exporter/helm-release.yaml
-- plugin/helm-release.yaml
+- operator/hr.yaml
+- gpu/hr.yaml
