--- a/cluster/core/intel-gpu-plugin/operator/hr.yaml
+++ b/cluster/core/intel-gpu-plugin/operator/hr.yaml
@@ -4,6 +4,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
   name: intel-device-plugin-operator
+  namespace: kube-system
 spec:
   interval: 30m
   chart:
@@ -12,7 +13,7 @@ spec:
       version: 0.29.0
       sourceRef:
         kind: HelmRepository
-        name: intel
+        name: intel-charts
         namespace: flux-system
   install:
     crds: CreateReplace
