--- a/cluster/core/intel-gpu-plugin/gpu/hr.yaml
+++ b/cluster/core/intel-gpu-plugin/gpu/hr.yaml
@@ -13,7 +13,7 @@ spec:
       version: 0.29.0
       sourceRef:
         kind: HelmRepository
-        name: intel
+        name: intel-charts
         namespace: flux-system
   install:
     remediation:
