--- a/cluster/core/clickops/role.yaml
+++ b/cluster/core/clickops/role.yaml
@@ -20,3 +20,13 @@ rules:
 - apiGroups: [""]
   resources: ["events"]
   verbs: ["list"]
+
+
+# stderr: 'Error from server (Forbidden): helmreleases.helm.toolkit.fluxcd.io "nginx" is forbidden: User "system:serviceaccount:default:clickops" cannot patch resource "helmreleases" in API group "helm.toolkit.fluxcd.io" in the namespace "kube-system"\n',
+- apiGroups: ["helm.toolkit.fluxcd.io"]
+  resources: ["helmreleases"]
+  verbs: ["patch"]
+#   body: '{"kind":"Status","apiVersion":"v1","metadata":{},"status":"Failure","message":"pods \\"nginx-6c9fdc487b-fw2sz\\" is forbidden: User \\"system:serviceaccount:default:clickops\\" cannot delete resource \\"pods\\" in API group \\"\\" in the namespace \\"kube-system\\"","reason":"Forbidden","details":{"name":"nginx-6c9fdc487b-fw2sz","kind":"pods"},"code":403}\n',
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["delete"]
