--- a/cluster/core/clickops/role.yaml
+++ b/cluster/core/clickops/role.yaml
@@ -6,7 +6,7 @@ metadata:
 rules:
 # used for reviewing pods
 - apiGroups: [""] # "" indicates the core API group
-  resources: ["pods"]
+  resources: ["*"]
   verbs: ["get", "watch", "list"]
 # used for listing and retrieving information on helm releases
 - apiGroups: ["helm.toolkit.fluxcd.io"]
