--- a/cluster/core/cilium/hr.yaml
+++ b/cluster/core/cilium/hr.yaml
@@ -18,7 +18,7 @@ spec:
   interval: 30m
 
   values:
-    autoDirectNodeRoutes: true
+    #autoDirectNodeRoutes: true
     bandwidthManager:
       enabled: true
       bbr: true
