tryout new settings

--- a/cluster/core/cilium/hr.yaml
+++ b/cluster/core/cilium/hr.yaml
@@ -18,31 +18,47 @@ spec:
   interval: 30m
 
   values:
-    #autoDirectNodeRoutes: true
-    #bandwidthManager:
-      #  enabled: true
-      #  bbr: true
-    #bpf:
-      #  masquerade: true
-    cluster:
-      name: kubernetes
-      id: 1
-
+    autoDirectNodeRoutes: true
+    bandwidthManager:
+      enabled: true
+      bbr: true
+    bpf:
+      masquerade: false
+      tproxy: true
     # choose between bgp or l2announcements
     bgpControlPlane:
       enabled: true
-    l2announcements:
-      enabled: false
-      # enabled: true
-      # leaseDuration: 120s
-      # leaseRenewDeadline: 60s
-      # leaseRetryPeriod: 1s
-
-    containerRuntime:
-      integration: containerd
-      socketPath: /var/run/k3s/containerd/containerd.sock
+    cgroup:
+      autoMount:
+        enabled: false
+      hostRoot: "/sys/fs/cgroup"
+    cluster:
+      name: kubernetes
+      id: 1
+    #containerRuntime:
+      #  integration: containerd
+      #  socketPath: /var/run/k3s/containerd/containerd.sock
+    devices: ['eno1', 'enp1s0', 'enp2s0']
+    enableRuntimeDeviceDetection: true
     endpointRoutes:
       enabled: true
+    routingMode: native
+    # TODO: use vlan
+    ipam:
+      mode: kubernetes
+    ipv4NativeRoutingCIDR: ${NET_POD_CIDR}
+    kubeProxyReplacement: true
+    kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
+    k8sServiceHost: ${SVC_K8S_ADDR}
+    k8sServicePort: 6443
+    loadBalancer:
+      mode: dsr
+      algorithm: maglev
+    l7Proxy: true
+    localRedirectPolicy: true
+    l2announcements:
+      enabled: true
+
     hubble:
       serviceMonitor:
         enabled: true
@@ -79,16 +95,12 @@ spec:
                 - *host
     #ipam:
       #  mode: kubernetes
-    ipv4NativeRoutingCIDR: ${NET_POD_CIDR}
-    k8sServiceHost: ${SVC_K8S_ADDR}
-    k8sServicePort: 6443
-    kubeProxyReplacement: true
-    kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
+
 
     #loadBalancer:
     #  algorithm: maglev
     #   mode: dsr
-    localRedirectPolicy: true
+    #localRedirectPolicy: true
     operator:
       rollOutPods: true
       prometheus:
@@ -108,7 +120,3 @@ spec:
       enabled: true
       annotations:
         grafana_folder: Cilium
-    rollOutCiliumPods: true
-    securityContext:
-      privileged: true
-    tunnel: disabled
