--- a/cluster/core/cilium/hr.yaml
+++ b/cluster/core/cilium/hr.yaml
@@ -38,7 +38,7 @@ spec:
     #containerRuntime:
       #  integration: containerd
       #  socketPath: /var/run/k3s/containerd/containerd.sock
-    devices: ['eno1', 'enp1s0', 'enp2s0']
+    devices: ['vlan42+']
     enableRuntimeDeviceDetection: true
     endpointRoutes:
       enabled: true
@@ -49,7 +49,8 @@ spec:
     ipv4NativeRoutingCIDR: ${NET_POD_CIDR}
     kubeProxyReplacement: true
     kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
-    k8sServiceHost: ${SVC_K8S_ADDR}
+    # k8sServiceHost: ${SVC_K8S_ADDR}
+    k8sServiceHost: 127.0.0.1
     k8sServicePort: 6443
     loadBalancer:
       mode: dsr
